27122021 - Alterado segurança de acesso para os services; criado manipulador de exceção AccessDeniedException; criado UserGroups para criar grupos de perfis