@@ -3,8 +3,10 @@ package com.pifrans.auth.services;
 import com.pifrans.auth.constants.UserProfiles;
 import com.pifrans.auth.models.Profile;
 import com.pifrans.auth.models.User;
-import org.springframework.beans.factory.annotation.Autowired;
+import com.pifrans.auth.repositories.ProfileRepository;
+import com.pifrans.auth.repositories.UserRepository;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.Arrays;
 import java.util.List;
@@ -14,27 +16,38 @@ import java.util.logging.Logger;
 @Service
 public class DBService {
     private static final Logger LOG = Logger.getLogger(DBService.class.getName());
-    private final UserService userService;
-    private final ProfileService profileService;
+    private final UserRepository userRepository;
+    private final ProfileRepository profileRepository;
 
-    @Autowired
-    public DBService(ProfileService profileService, UserService userService) {
-        this.profileService = profileService;
-        this.userService = userService;
+    public DBService(UserRepository userRepository, ProfileRepository profileRepository) {
+        this.userRepository = userRepository;
+        this.profileRepository = profileRepository;
     }
 
-    public void init() {
-        Profile p1 = Profile.builder().permission(UserProfiles.ROLE_ADMIN).build();
-        Profile p2 = Profile.builder().permission(UserProfiles.ROLE_USER).build();
 
-        User u1 = User.builder().name("admin").email("admin@gmail.com").password("@Lu182905").isActive(true).profiles(Set.copyOf(List.of(p1, p2))).build();
-        User u2 = User.builder().name("user").email("user@gmail.com").password("@Lu182905").isActive(true).build();
+    @Transactional
+    public void init() {
+        Profile p1 = Profile.builder().permission(UserProfiles.ROLE_ADMIN.name()).build();
+        Profile p2 = Profile.builder().permission(UserProfiles.ROLE_USER.name()).build();
+
+        User u1 = new User();
+        u1.setName("admin");
+        u1.setEmail("admin@gmail.com");
+        u1.setPassword("@Lu12345");
+        u1.setActive(true);
+        u1.setProfiles(Set.copyOf(List.of(p1, p2)));
+
+        User u2 = new User();
+        u2.setName("user");
+        u2.setEmail("user@gmail.com");
+        u2.setPassword("@Lu12345");
+        u2.setActive(true);
 
         try {
-            profileService.saveAll(List.of(p1, p2));
-            userService.saveAll(Arrays.asList(u1, u2));
+            profileRepository.saveAll(List.of(p1, p2));
+            userRepository.saveAll(Arrays.asList(u1, u2));
         } catch (Exception e) {
-            LOG.severe(e.getCause().getCause().getMessage());
+            LOG.severe(e.getMessage());
         }
     }
 }
